workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__endpoint__test__can_handle_rename_path_parameter_command__new_events.snap
---
source: workspaces/diff-engine/src/commands/endpoint.rs
expression: new_events
---
[
    PathParameterRenamed(
        PathParameterRenamed {
            path_id: "path_1",
            name: "taskId",
            event_context: None,
        },
    ),
]
