workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__endpoint__test__can_handle_rename_path_parameter_command__renaming_root_result.snap
---
source: workspaces/diff-engine/src/commands/endpoint.rs
expression: renaming_root_result.unwrap_err()
---
Validation(
    "Command failed validation: path id can not be root to rename path parameter, \"RenamePathParameter(RenamePathParameter { path_id: \\\"root\\\", name: \\\"taskId\\\" })\"",
)
